--- a/prog/EnterpriseClient/EnterpriseClient/EnterpriseClient.csproj
+++ b/prog/EnterpriseClient/EnterpriseClient/EnterpriseClient.csproj
@@ -10,12 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\OrderView\" />
-    <Folder Include="Views\ProductView\" />
-    <Folder Include="Views\RowsView\" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.9.2" />
   </ItemGroup>
 
   <ItemGroup>
